stops the overflow

--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -12,5 +12,5 @@ body {
 }
 
 .app {
-	height: 100%;
+	height: 95%;
 }
